--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Chinmay",
+  "license": "MIT",
   "description": "",
   "dependencies": {
     "chalk": "^5.3.0",
